--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from: "${androidBuild}/deps.gradle"
     repositories {
         mavenLocal()
         if (project.properties.containsKey("localArtifactoryUrl")) {
             maven { url localArtifactoryUrl }
         }
         jcenter()
+        mavenCentral()
         google()
     }
 
+//    dependencies {
+//        classpath androidPlugin
+//        classpath kotlinPlugin
+//    }
     dependencies {
-        classpath androidPlugin
-        classpath mavenPlugin
+        classpath 'com.android.tools.build:gradle:4.1.3'
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+        google()
     }
 }
